--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
-	<title>Hoja de vida</title>
-=======
-	<title>HOJA DE VIDA</title>
->>>>>>> origin/master
+		<meta charset="utf-8">
+		<meta name="viewport" content="inicial-scale=1,maximumum-scale=1", width= device-whidth>
+		<title>HOJA DE VIDA</title>
+
 </head>
 <body>
+		<svg width="300px" height="300px"  viewBox= "0 10 600 600">
+		<image  width="500px" height="500px" xlink:href = "img/logo.svg" ></image>
+		</svg>
+
 
 </body>
 </html>
