--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 
 </head>
 <body>
-		<svg width="300px" height="300px"  viewBox= "0 10 600 600">
-		<image  width="500px" height="500px" xlink:href = "img/logo.svg" ></image>
+		<svg width="300px" height="300px"  viewBox= "100 10 350 350">
+		<image  width="500px" height="500px" xlink:href = "img/logo.svg" ></image>		
 		</svg>
+		<h1>HOJA DE VIDA</h1>
+		<p>
+			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
+			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
+			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3>
+		</p>
 
 
 </body>
