Creación y enlaces de acceso

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
 			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3>
 		</p>
-
+		<a href="Educación.html" target="_blank">Educación</a> | <a href="Experiencia.html" target= "_blank">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
 
 </body>
 </html>
