FIN_pagina principal

--- a/index.html
+++ b/index.html
@@ -14,9 +14,34 @@
 		<p>
 			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
-			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3>
+			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
+			<a href="Educación.html" target="_blank">Educación</a> | <a href="Experiencia.html" target= "_blank">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
+			<h2>Información Personal</h2><br>
+			<img src="img/foto.jpg" alt="Héctor Ramírez" title="Foto HV" width="200px" />
 		</p>
-		<a href="Educación.html" target="_blank">Educación</a> | <a href="Experiencia.html" target= "_blank">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
+		<p><h3>Perfil</h3><br>
+		Mi formación como profesional me faculta para brindar soporte a la modernización de la industria, adecuaciones, actualización tecnológica y mantenimiento en el campo de la instrumentación y Control electrónico Industrial. Soy una persona líder, honesta, con facilidad para trabajar en equipo, activa, adaptable al cambio, dispuesta a mejorar cada día y competente en: Diseño y construcción de redes para equipos en centros de servicio. Habilidad para la interpretación de planos de equipos electrónicos. Amplio conocimiento para acompañar y liderar el departamento de informática o grupo de soporte técnico para mantener operando las estaciones de cómputo, periféricos y aplicaciones correctamente. Efectividad para la administración de datos mediante los siguientes gestores: Oracle, Sybase y MySql
+		
 
+		</p>
+		<article>
+			
+			<ul><h3>Idiomas</h3>
+				<li><ul><strong>Español</strong>
+						<li><em>Lengua nativa</em></li>
+					</ul>
+				</li>
+				<li><ul><strong>Ingles</strong>
+						<li><em>Lectura (media)</em></li>   
+						<li><em>Escritura (media)</em></li>
+						<li><em>Dialogo (bajo)</em></li>
+					</ul>	
+				</li>
+			</ul>
+
+		</article><br>
+		<footer>Correo: hedcand@hotmail.com<br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
+			
+		</footer>
 </body>
 </html>
