--- a/Educación.html
+++ b/Educación.html
@@ -3,9 +3,24 @@
 <head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="inicial-scale=1,maximumum-scale=1", width= device-whidth>
-		<title>Estudios realizados</title>
+		<title>HOJA DE VIDA</title>
+
 </head>
 <body>
+		<svg width="300px" height="300px"  viewBox= "100 10 350 350">
+		<image  width="500px" height="500px" xlink:href = "img/logo.svg" ></image>		
+		</svg>
+		<h1>HOJA DE VIDA</h1>
+		<p>
+			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
+			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
+			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
+			<a href="index.html">Inicio</a> | <a href="Experiencia.html">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
 
+
+
+		<footer>Correo: hedcand@hotmail.com<br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
+			
+		</footer>
 </body>
 </html>
