--- a/Educación.html
+++ b/Educación.html
@@ -7,8 +7,8 @@
 
 </head>
 <body>
-		<svg width="300px" height="300px"  viewBox= "100 10 350 350">
-		<image  width="500px" height="500px" xlink:href = "img/logo.svg" ></image>		
+		<svg width="300px" height="300px"  viewBox= "10 0 300 300">
+		<image  width="500px" height="500px" xlink:href = "img/log_2.svg" ></image>		
 		</svg>
 		<h1>HOJA DE VIDA</h1>
 		<p>
