Modificacion en presentación
el cambio de logo hizo modificar campo de posición y la tilde en el
nombre de paginas hizo necesario renombrar archivos el llamado en el
parametor href

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 </head>
 <body>
-		<svg width="300px" height="300px"  viewBox= "10 0 300 300">
-		<image  width="500px" height="500px" xlink:href = "img/log_1.svg" ></image>		
+		<svg width="350px" height="300px"  viewBox= "50 10 300 300">
+		<image  width="400px" height="400px" xlink:href = "img/log_1.svg" ></image>		
 		</svg>
 		<h1>HOJA DE VIDA</h1>
 		<p>
 			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
 			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
-			<a href="Educación.html" >Educación</a> | <a href="Experiencia.html">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
+			<a href="educacion.html" >Educación</a> | <a href="experiencia.html">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
 			<h2>Información Personal</h2><br>
 			<img src="img/foto.jpg" alt="Héctor Ramírez" title="Foto HV" width="200px" />
 		</p>
