--- a/educacion.html
+++ b/educacion.html
@@ -7,15 +7,15 @@
 
 </head>
 <body>
-		<svg width="300px" height="300px"  viewBox= "10 0 300 300">
-		<image  width="500px" height="500px" xlink:href = "img/log_2.svg" ></image>		
+		<svg width="350px" height="300px"  viewBox= "50 10 300 300">
+		<image  width="400px" height="400px" xlink:href = "img/log_2.svg" ></image>			
 		</svg>
 		<h1>HOJA DE VIDA</h1>
 		<p>
 			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
 			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
-			<a href="index.html">Inicio</a> | <a href="Experiencia.html">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
+			<a href="index.html">Inicio</a> | <a href="experiencia.html">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
 
 
 
