Creación de tabla y orden del código

--- a/educacion.html
+++ b/educacion.html
@@ -15,8 +15,46 @@
 			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
 			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
-			<a href="index.html">Inicio</a> | <a href="experiencia.html">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
-
+			<a href="index.html">Inicio</a> | <a href="experiencia.html">Experiencia</a> | 
+			<a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
+			<h3>Educación</h3><br>
+			<table border="1" cellspacing="0">
+			<tr>
+				<th>Año</th>
+				<th>Institución</th>
+				<th>Titulo</th>
+				<th>Lugar</th>
+				<th>¿Culmino?</th>
+			</tr>
+			<tr>
+				<td>2003</td>
+				<td>Sena Quindío</td>
+				<td>Técnico Profesional en Mantenimiento Electrónico</td>
+				<td>Armenia Quindio</td>
+				<td>SI</td>
+			</tr>
+			<tr>	
+				<td>2009</td>
+				<td>Universidad del Quindío</td>
+				<td>Tecnólogo en Electrónica</td>
+				<td>Armenia Quindio</td>
+				<td>SI</td>
+			</tr>	
+			<tr><td>2014</td>
+				<td>Universidad del Quindío</td>
+				<td>Ingenieria de Sistemas</td>
+				<td>Armenia Quindio</td>
+				<td>NO</td>
+			</tr>
+			<tr>
+				<td>2016</td>
+				<td>CEET Sena</td>
+				<td>Especialista en Gestión y Seguridad de Base de Datos</td>
+				<td>Bogotá D.C</td>
+				<td>SI</td>
+			</tr>
+		</table>
+			
 
 
 		<footer>Correo: hedcand@hotmail.com<br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
