--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
 			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
-			<a href="educacion.html" >Educación</a> | <a href="experiencia.html">Experiencia</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
+			<a href="educacion.html" >Educación</a> | <a href="experiencia.html">Experiencia</a> | 
+			<a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
 			<h2>Información Personal</h2><br>
 			<img src="img/foto.jpg" alt="Héctor Ramírez" title="Foto HV" width="200px" />
 		</p>
