FIN pagina educación
Con fundamentos de HTML no logre poner campo requqerido en textarea y
posicionar el titulo en el inicio

--- a/educacion.html
+++ b/educacion.html
@@ -53,7 +53,53 @@
 				<td>Bogotá D.C</td>
 				<td>SI</td>
 			</tr>
-		</table>
+		</table><br>
+
+			<strong>Agregar Estudios</strong>
+			<form action="" autocomplete="on" name="Estudios">
+				<p>
+				<label for="epoca"><strong>Año</strong></label>
+					<select name="epoca">
+						<option value="1">2017</option>
+						<option value="2">2016</option>
+						<option value="3">2015</option>
+						<option value="1">2014</option>
+						<option value="2">2013</option>
+						<option value="3">2012</option>
+						<option value="3">2011</option>
+						<option value="3">2010</option>
+						<option value="3">2009</option>
+						<option value="3">2008</option>
+						<option value="3">2007</option>
+						<option value="3">2016</option>
+					</select>
+				</p>
+
+				<p>
+					<label for="nom"><strong>Institución:</label></strong>
+					<input type="text"  placeholder=" Universitaria de Colombia" required>
+				</p>
+
+				<p>
+					<label for="Titulo"><strong>Titulo:</label></strong>
+					<input type="text" required>
+				</p>
+				
+				<p>
+					<label for="Lugar"><strong>Lugar:</strong></label>
+					<textarea name="Lugar" ></textarea>
+				</p>
+
+				<p>
+					<label for= "Validar"><strong>¿Culmino?</strong></label>
+					<input type="radio" name="Validar" required>SI
+					<input type="radio" name="Validar" required>NO
+				</p>
+				<p>
+					<input type="submit" value="Enviar">
+				</p>
+
+
 			
 
 
