Estilo de enlaces e icono

--- a/Experiencia.html
+++ b/Experiencia.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="inicial-scale=1,maximumum-scale=1", width= device-whidth>
 		<title>HOJA DE VIDA</title>
+		<link rel="shortcut icon" href= "img/icono.png"/>
 
 </head>
 <body>
@@ -15,10 +16,25 @@
 			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
 			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
-			<a href="index.html">Inicio</a> | <a href="educacion.html" >Educación</a> | <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
+			<ul>				
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="educacion.html" >Educación</a></li>
+				<li><a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a></li>
+			</ul>
+			<h2>Experiencia</h2>
+			<strong></strong>
 
 
-		<footer>Correo: hedcand@hotmail.com<br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
+			<video width="700" height="" src = "media/video.mp4" controls ></video><br>
+			<audio src="media/audio.mp3" controls ></audio><br>
+
+
+		</p>
+
+
+
+
+		<footer>Correo: <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio"> hedcand@hotmail.com</a><br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
 			
 		</footer>
 </body>
