--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="inicial-scale=1,maximumum-scale=1", width= device-whidth>
 		<title>HOJA DE VIDA</title>
+		<link rel="shortcut icon" href= "img/icono.png"/>
 
 </head>
 <body>
@@ -15,13 +16,16 @@
 			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
 			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
-			<a href="educacion.html" >Educación</a> | <a href="experiencia.html">Experiencia</a> | 
-			<a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
-			<h2>Información Personal</h2><br>
+			<ul>
+				<li><a href="educacion.html" >Educación</a></li>
+				<li><a href="experiencia.html">Experiencia</a></li>
+				<li><a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a></li>
+			</ul>
+			<h2>Información Personal</h2>
 			<img src="img/foto.jpg" alt="Héctor Ramírez" title="Foto HV" width="200px" />
 		</p>
-		<p><h3>Perfil</h3><br>
-		Mi formación como profesional me faculta para brindar soporte a la modernización de la industria, adecuaciones, actualización tecnológica y mantenimiento en el campo de la instrumentación y Control electrónico Industrial. Soy una persona líder, honesta, con facilidad para trabajar en equipo, activa, adaptable al cambio, dispuesta a mejorar cada día y competente en: Diseño y construcción de redes para equipos en centros de servicio. Habilidad para la interpretación de planos de equipos electrónicos. Amplio conocimiento para acompañar y liderar el departamento de informática o grupo de soporte técnico para mantener operando las estaciones de cómputo, periféricos y aplicaciones correctamente. Efectividad para la administración de datos mediante los siguientes gestores: Oracle, Sybase y MySql
+		<p><h3>Perfil</h3>
+		Mi formación como profesional me faculta para brindar soporte a la modernización de la industria, adecuaciones, actualización tecnológica y mantenimiento en el campo de la instrumentación y control electrónico industrial. Soy una persona líder, honesta, con facilidad para trabajar en equipo, activa, adaptable al cambio, dispuesta a mejorar cada día y competente en: Diseño y construcción de redes para equipos en centros de servicio. Habilidad para la interpretación de planos de equipos electrónicos. Amplio conocimiento para acompañar y liderar el departamento de informática o grupo de soporte técnico para mantener operando las estaciones de cómputo, periféricos y aplicaciones correctamente. Efectividad para la administración de datos mediante los siguientes gestores: Oracle, Sybase y MySql
 		
 
 		</p>
@@ -29,7 +33,7 @@
 			
 			<ul><h3>Idiomas</h3>
 				<li><ul><strong>Español</strong>
-						<li><em>Lengua nativa</em></li>
+						<li><em>Lengua Nativa</em></li>
 					</ul>
 				</li>
 				<li><ul><strong>Ingles</strong>
@@ -41,7 +45,7 @@
 			</ul>
 
 		</article><br>
-		<footer>Correo: hedcand@hotmail.com<br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
+		<footer>Correo: <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio"> hedcand@hotmail.com</a><br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
 			
 		</footer>
 </body>
