--- a/educacion.html
+++ b/educacion.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="inicial-scale=1,maximumum-scale=1", width= device-whidth>
 		<title>HOJA DE VIDA</title>
+		<link rel="shortcut icon" href= "img/icono.png"/>
 
 </head>
 <body>
@@ -15,9 +16,16 @@
 			<h2><strong>Nombres: </strong><em>Héctor Andrés</em></h2><br>
 			<h2><strong> Apellidos: </strong><em>Ramírez Muñoz</em></h2><br>
 			<h3><strong>Fecha y lugar de nacimiento: </strong><em>27/08/1983_Popayán Cauca</em></h3><br>
-			<a href="index.html">Inicio</a> | <a href="experiencia.html">Experiencia</a> | 
-			<a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a>
-			<h3>Educación</h3><br>
+			<ul>	
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="experiencia.html">Experiencia</a></li>
+				<li><a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a></li>
+			</ul>
+		</p>
+
+		<p>
+			<h3>Educación</h3>
+					
 			<table border="1" cellspacing="0">
 			<tr>
 				<th>Año</th>
@@ -53,7 +61,8 @@
 				<td>Bogotá D.C</td>
 				<td>SI</td>
 			</tr>
-		</table><br>
+			</table><br>
+		</p>
 
 			<strong>Agregar Estudios</strong>
 			<form action="" autocomplete="on" name="Estudios">
@@ -103,7 +112,7 @@
 			
 
 
-		<footer>Correo: hedcand@hotmail.com<br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
+		<footer> Correo: <a href="mailto:hedcand@hotmail.com?subject=informacion del sitio"> hedcand@hotmail.com</a><br>Celular: 317724xxxx<br>Bogotá D.C. Colombia
 			
 		</footer>
 </body>
