modificaiones en posición del logo
chrome me presento un problema para reproducir el video, al cambiar a
mozila requerí modificar posicionamiento del logo en la 3 paginas

--- a/Experiencia.html
+++ b/Experiencia.html
@@ -8,8 +8,8 @@
 
 </head>
 <body>
-		<svg width="350px" height="300px"  viewBox= "50 10 300 300">
-		<image  width="400px" height="400px" xlink:href = "img/log_3.svg" ></image>		
+		<svg width="350px" height="300px"  viewBox= "50 0 600 400">
+		<image  width="700px" height="500px" xlink:href = "img/log_3.svg" ></image>		
 		</svg>
 		<h1>HOJA DE VIDA</h1>
 		<p>
@@ -22,10 +22,10 @@
 				<li><a href="mailto:hedcand@hotmail.com?subject=informacion del sitio" >Contacto</a></li>
 			</ul>
 			<h2>Experiencia</h2>
-			<strong></strong>
-
+			<strong>Video de presentación</strong><br>
 
 			<video width="700" height="" src = "media/video.mp4" controls ></video><br>
+			<strong>Mis Pasatiempos</strong><br>
 			<audio src="media/audio.mp3" controls ></audio><br>
 
 
