--- a/educacion.html
+++ b/educacion.html
@@ -8,8 +8,8 @@
 
 </head>
 <body>
-		<svg width="350px" height="300px"  viewBox= "50 10 300 300">
-		<image  width="400px" height="400px" xlink:href = "img/log_2.svg" ></image>			
+		<svg width="350px" height="300px"  viewBox= "50 0 600 400">
+		<image  width="700px" height="500px" xlink:href = "img/log_3.svg" ></image>			
 		</svg>
 		<h1>HOJA DE VIDA</h1>
 		<p>
@@ -32,7 +32,7 @@
 				<th>Institución</th>
 				<th>Titulo</th>
 				<th>Lugar</th>
-				<th>¿Culmino?</th>
+				<th>¿Culminó?</th>
 			</tr>
 			<tr>
 				<td>2003</td>
@@ -57,7 +57,7 @@
 			<tr>
 				<td>2016</td>
 				<td>CEET Sena</td>
-				<td>Especialista en Gestión y Seguridad de Base de Datos</td>
+				<td>Especialista en Gestión y Seguridad de Bases de Datos</td>
 				<td>Bogotá D.C</td>
 				<td>SI</td>
 			</tr>
@@ -100,7 +100,7 @@
 				</p>
 
 				<p>
-					<label for= "Validar"><strong>¿Culmino?</strong></label>
+					<label for= "Validar"><strong>¿Culminó?</strong></label>
 					<input type="radio" name="Validar" required>SI
 					<input type="radio" name="Validar" required>NO
 				</p>
